--- a/package.yaml
+++ b/package.yaml
@@ -81,8 +81,8 @@ library:
       else:
         # provide/emulate `Control.Monad.Fail` and `Data.Semigroups` API for pre-GHC8
         dependencies:
-          - fail       == 4.9.*
-          - semigroups == 0.18.*
+          - fail       ==4.9.*
+          - semigroups ==0.18.*
   source-dirs: src
   c-sources:
     - src/System/GPIO/Linux/Sysfs/pollSysfs.c
@@ -120,13 +120,13 @@ library:
     - directory           >=1.2.1  && <1.4
     - exceptions          >=0.8.0  && <1
     - filepath            >=1.3.0  && <1.5
-    - monad-control       == 1.*
-    - monad-logger        == 0.3.*
+    - monad-control       ==1.*
+    - monad-logger        ==0.3.*
     - mtl                 >=2.1.3  && <2.3
-    - protolude           == 0.2.*
+    - protolude           ==0.2.*
     - text                >=1.2.0  && <1.3
     - transformers        >=0.3.0  && <0.6
-    - transformers-base   == 0.4.*
+    - transformers-base   ==0.4.*
     - unix                >=2.7.0  && <2.8
     - unix-bytestring     >=0.3.7  && <0.4
 
@@ -149,7 +149,7 @@ executables:
         else:
           dependencies:
           - base
-          - async >=2.0.2 && <2.2
+          - async                >=2.0.2 && <2.2
           - exceptions
           - hpio
           - mtl
@@ -209,7 +209,7 @@ tests:
       else:
         dependencies:
           - base
-          - doctest
+          - doctest   >=0.9.13
           - filepath
           - protolude
   spec:
