--- a/hpio.cabal
+++ b/hpio.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 59a015137b3603cd0c9ae210407c08f67f9b52016c858c0567a5841a2e111e3b
+-- hash: fd910a61fbb3e4ae0e669892cb85c6700aa2e113bee44d3b4e493d378142cc12
 
 name:                   hpio
 version:                0.9.0.3
@@ -157,7 +157,7 @@ executable hpio-example
       , text
       , transformers
   if impl(ghc >= 8.0)
-    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
   default-language: Haskell2010
 
 executable hpio-reader-example
@@ -185,7 +185,7 @@ executable hpio-reader-example
       , text
       , transformers
   if impl(ghc >= 8.0)
-    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
   default-language: Haskell2010
 
 executable hpio-sysfs-example
@@ -213,7 +213,7 @@ executable hpio-sysfs-example
       , text
       , transformers
   if impl(ghc >= 8.0)
-    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints -fno-warn-redundant-constraints
+    ghc-options: -Wcompat -Wnoncanonical-monad-instances -Wnoncanonical-monadfail-instances -fno-warn-redundant-constraints
   default-language: Haskell2010
 
 test-suite doctest
