--- a/hpio.cabal
+++ b/hpio.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: a29ed38c408ec394121f059ce60dd207056733f59d13f66f1511984fd0168b43
+-- hash: ab2472cb50dc2e7d92be24fa2e85eeaf377503258f8abf0316644bc9d83f262f
 
 name:                   hpio
 version:                0.9.0.3
@@ -49,15 +49,15 @@ extra-source-files:
     nix/overlays/haskell-overrides.nix
     nix/pkgs/base-compat-0.9.3.nix
     nix/pkgs/fail-4.9.0.0.nix
+    nix/pkgs/hpio-ghc7102.nix
+    nix/pkgs/hpio-ghc7103.nix
+    nix/pkgs/hpio-ghc784.nix
+    nix/pkgs/hpio-hlint.nix
     nix/pkgs/hpio.nix
     nix/pkgs/monad-logger-0.3.16.nix
-    nix/pkgs/mtl-2.2.1.nix
-    nix/pkgs/mtl-compat-0.2.1.3.nix
-    nix/pkgs/primitive-0.6.2.0.nix
     nix/pkgs/protolude-0.2.nix
+    nix/pkgs/semigroups-0.18.2-ghc784.nix
     nix/pkgs/semigroups-0.18.2.nix
-    nix/pkgs/transformers-0.4.3.0.nix
-    nix/pkgs/transformers-compat-0.4.0.4.nix
     nix/pkgs/unix-bytestring-0.3.7.3.nix
     nix/pkgs/void-0.7.2.nix
     package.yaml
