--- a/hpio.cabal
+++ b/hpio.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 1ee52cb9701cf9a56a4637d5bd853f8ac374e8cfba6e87fa652baaa36ef452e6
+-- hash: 573251655ed3f45dd4841891771709363bc0280c4d67d34014e5bcb41341c2fc
 
 name:                   hpio
 version:                0.9.0.3
@@ -40,6 +40,7 @@ extra-source-files:
     nix/fetch-github.nix
     nix/fetch-nixpkgs-stackage-nixpkgs.nix
     nix/jobsets/default.nix
+    nix/jobsets/next.nix
     nix/jobsets/release.nix
     nix/jobsets/spec.json
     nix/jobsets/testing.nix
