--- a/package.yaml
+++ b/package.yaml
@@ -193,7 +193,7 @@ tests:
       else:
         dependencies:
           - base
-          - hlint     ==2.0.*
+          - hlint     >=2.0 && <2.2
           - protolude
   doctest:
     main: doctest.hs
