--- a/hpio.cabal
+++ b/hpio.cabal
@@ -1,11 +1,11 @@
--- This file has been generated from package.yaml by hpack version 0.21.2.
+-- This file has been generated from package.yaml by hpack version 0.27.0.
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 8b5b1320099d5c5c93380b816a52ed8748dd27f13443df9a52be935bcc22ab79
+-- hash: dc74eed8b17aa83c4650ab10e6059172f8787907900532262be2ac7f7c3dbaab
 
 name:                   hpio
-version:                0.9.0.5
+version:                0.9.0.6
 synopsis:               Monads for GPIO in Haskell
 description:            This package provides an embedded DSL for writing cross-platform
                         GPIO programs in Haskell. Currently only Linux is supported (via the
@@ -28,7 +28,7 @@ maintainer:             Drew Hess <dhess-src@quixoftic.com>
 copyright:              Copyright (c) 2018, Quixoftic, LLC
 license:                BSD3
 license-file:           LICENSE
-tested-with:            GHC==7.8.4 GHC==7.10.3 GHC==8.0.2 GHC==8.2.2
+tested-with:            GHC==8.0.2 GHC==8.2.2 GHC==8.4.1
 build-type:             Simple
 cabal-version:          >= 1.10
 
@@ -37,7 +37,7 @@ extra-source-files:
     changelog.md
     package.yaml
     README.md
-    stack-lts-10.yaml
+    stack-lts-11.yaml
     stack-lts-9.yaml
     stack.yaml
 
