--- a/package.yaml
+++ b/package.yaml
@@ -1,5 +1,5 @@
 name:        hpio
-version:     0.9.0.5
+version:     0.9.0.6
 synopsis:    Monads for GPIO in Haskell
 category:    System
 stability:   experimental
@@ -31,7 +31,7 @@ description: ! 'This package provides an embedded DSL for writing cross-platform
 
   module, which explains how to use the cross-platform DSL.'
 
-tested-with: GHC==7.8.4 GHC==7.10.3 GHC==8.0.2 GHC==8.2.2
+tested-with: GHC==8.0.2 GHC==8.2.2 GHC==8.4.1
 
 flags:
   test-hlint:
@@ -239,4 +239,4 @@ extra-source-files:
   - package.yaml
   - stack.yaml
   - stack-lts-9.yaml
-  - stack-lts-10.yaml
+  - stack-lts-11.yaml
