--- a/hpio.cabal
+++ b/hpio.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 01e1d1088ccb4c2ed9c1b46ea5c2966aca06a1f93adb54cb25546711813bb7cc
+-- hash: 03a4c39cbc999f0e19f30b265ee1670fa1807010bf6f1a74552012d1a19a5e0d
 
 name:                   hpio
 version:                0.9.0.6
@@ -28,7 +28,7 @@ maintainer:             Drew Hess <src@drewhess.com>
 copyright:              Copyright (c) 2018, Drew Hess
 license:                BSD3
 license-file:           LICENSE
-tested-with:            GHC==8.0.2 GHC==8.2.2 GHC==8.4.3
+tested-with:            GHC==8.0.2 GHC==8.2.2 GHC==8.4.4 GHC==8.6.3
 build-type:             Simple
 cabal-version:          >= 1.10
 extra-source-files:
@@ -75,10 +75,10 @@ library
   c-sources:
       src/System/GPIO/Linux/Sysfs/pollSysfs.c
   build-depends:
-      QuickCheck >=2.7.6 && <2.12
+      QuickCheck >=2.7.6 && <2.13
     , base >=4.7.0 && <5
     , bytestring >=0.10.4 && <0.11
-    , containers >=0.5.5 && <0.6
+    , containers >=0.5.5 && <0.7
     , directory >=1.2.1 && <1.4
     , exceptions >=0.8.0 && <1
     , filepath >=1.3.0 && <1.5
