--- a/package.yaml
+++ b/package.yaml
@@ -31,7 +31,7 @@ description: ! 'This package provides an embedded DSL for writing cross-platform
 
   module, which explains how to use the cross-platform DSL.'
 
-tested-with: GHC==8.0.2 GHC==8.2.2 GHC==8.4.3
+tested-with: GHC==8.0.2 GHC==8.2.2 GHC==8.4.4 GHC==8.6.3
 
 flags:
   test-hlint:
@@ -113,10 +113,10 @@ library:
     - TypeSynonymInstances
     - UndecidableInstances
   dependencies:
-    - QuickCheck          >=2.7.6  && <2.12
+    - QuickCheck          >=2.7.6  && <2.13
     - base                >=4.7.0  && <5
     - bytestring          >=0.10.4 && <0.11
-    - containers          >=0.5.5  && <0.6
+    - containers          >=0.5.5  && <0.7
     - directory           >=1.2.1  && <1.4
     - exceptions          >=0.8.0  && <1
     - filepath            >=1.3.0  && <1.5
