--- a/.travis.yml
+++ b/.travis.yml
@@ -34,6 +34,10 @@ matrix:
   - env: BUILD=cabal GHCVER=8.2.2 CABALVER=2.0 HAPPYVER=1.19.5 ALEXVER=3.1.7
     compiler: ": #GHC 8.2.2"
     addons: {apt: {packages: [cabal-install-2.0,ghc-8.2.2,happy-1.19.5,alex-3.1.7], sources: [hvr-ghc]}}
+  - compiler: ": #GHC 8.4.4"
+    addons: {apt: {packages: [cabal-install-2.4,ghc-8.4.4,freeglut3-dev], sources: [hvr-ghc]}}
+  - compiler: ": #GHC 8.6.3"
+    addons: {apt: {packages: [cabal-install-2.4,ghc-8.6.3,freeglut3-dev], sources: [hvr-ghc]}}
 
   # Build with the newest GHC and cabal-install. This is an accepted failure,
   # see below.
@@ -53,6 +57,10 @@ matrix:
 
   - env: BUILD=stack ARGS="--resolver lts-11" STACK_YAML=stack-lts-11.yaml
     compiler: ": #stack 8.2.2"
+    addons: {apt: {packages: [libgmp-dev]}}
+
+  - env: BUILD=stack ARGS="--resolver lts-12" STACK_YAML=stack-lts-12.yaml
+    compiler: ": #stack 8.4.4"
     addons: {apt: {packages: [libgmp-dev]}}
 
   # Nightly builds are allowed to fail
