--- a/hpio.cabal
+++ b/hpio.cabal
@@ -2,7 +2,7 @@
 --
 -- see: https://github.com/sol/hpack
 --
--- hash: 03a4c39cbc999f0e19f30b265ee1670fa1807010bf6f1a74552012d1a19a5e0d
+-- hash: bf3e23fef6a68c1e41cff79cf7e70da4ccb42979e0ece2c3b7786d91ffa9f2ff
 
 name:                   hpio
 version:                0.9.0.6
@@ -38,6 +38,7 @@ extra-source-files:
     README.md
     stack-lts-11.yaml
     stack-lts-12.yaml
+    stack-lts-13.yaml
     stack-lts-9.yaml
     stack.yaml
 
